fix(#183) : Campana reemplazada y boton pagar perfeccionado, legibilidad del codigo mejorada. PR(#185)

--- a/src/cliente/scss/components/_cabecera.scss
+++ b/src/cliente/scss/components/_cabecera.scss
@@ -1,7 +1,6 @@
 .c-cabecera {
     display: flex;
     align-items: center;
-
     background: $almendraBlanca;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 2;
@@ -18,11 +17,9 @@
 .c-cabecera__logo {
     display: block;
     margin: 0 auto;
-
     @media only screen and (min-width: $mobile-l) {
         display: none;
     }
-
     &--completo {
         display: none;
         @media only screen and (min-width: $mobile-l) {
@@ -46,4 +43,44 @@
     align-items: center;
     height: 50px;
     width: 50px;
+}
+
+.c-cabecera__notificacion {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    width: 14px;
+    height: 14px;
+    background: blanchedalmond;
+    padding: 0;
+    border-radius: 10px;
+}
+
+.c-cabecera__notificacion-animacion {
+    animation: c-cabecera__notificacion 0.6s ease-in;
+}
+.c-cabecera__notificacion-interno {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    color: red;
+    font-size: 10px;
+}
+
+@keyframes c-cabecera__notificacion {
+    0% {
+        top: 8px
+    }
+    25% {
+        top: 4px
+    }
+    50% {
+        top: 8px
+    }
+    75% {
+        top: 4px
+    }
+    100% {
+        top: 8px
+    }
 }
